sorted/tests/07-unrecognized-pattern.stderr
error: unsupported match arm pattern
help: #[sorted] can just be applied to match statements that mach enum variants
  --> $DIR/07-unrecognized-pattern.rs:12:9
   |
12 |         [] => Some(0),
   |         ^^^^^^^^^^^^^^
